--- a/app/src/main/res/menu/menu_results.xml
+++ b/app/src/main/res/menu/menu_results.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="toyzdudes.mytoyzbook.ResultsActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_filter" android:title="@string/ac_filter_title" android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:orderInCategory="100" app:showAsAction="always" />
 </menu>
